add_subdirectory(libBaseFunctions)
add_subdirectory(libcmdline)
add_subdirectory(libsvmtl)
add_subdirectory(libBlitz2DGraphics)
add_subdirectory(libBlitzAnalyze)
add_subdirectory(libProgressReporter)
add_subdirectory(lmbs2kit)
add_subdirectory(libBlitzHdf5)
add_subdirectory(libBlitzFFTW)
add_subdirectory(libArrayToolbox)
add_subdirectory(libsegmentation)
add_subdirectory(libIRoCS)
add_subdirectory(libMultiChannelModel)
add_subdirectory(tools)
if (BUILD_SHARED_LIBS)
  add_subdirectory(libProgressReporter_qt4)
  if (Qt5Widgets_FOUND)
    add_subdirectory(libProgressReporter_qt5)
  endif()
  add_subdirectory(liblabelling_qt4)
  add_subdirectory(labelling)
  add_subdirectory(L_T_C)
  add_subdirectory(iRoCS_GUI)
  add_subdirectory(plugins)
endif()
