SUBDIRS = \
	libcmdline \
	libsvmtl \
	libProgressReporter \
	libProgressReporter_qt4 \
	libBaseFunctions \
	libBlitzAnalyze \
	libBlitzHdf5 \
	libBlitzFFTW \
	libBlitz2DGraphics \
	lmbs2kit \
	libArrayToolbox \
	libsegmentation \
	liblabelling_qt4 \
	labelling \
	libIRoCS \
	plugins \
	tools

pkginclude_HEADERS = config.hh
