SUBDIRS = \
	libcmdline \
	libsvmtl \
	libProgressReporter \
	libProgressReporter_qt4 \
	libBaseFunctions \
	libBlitzAnalyze \
	libBlitzHdf5 \
	libBlitzFFTW \
	libBlitz2DGraphics \
	lmbs2kit \
	libArrayToolbox \
	libsegmentation \
	liblabelling_qt4 \
	labelling \
	L_T_C \
	libIRoCS \
	plugins \
	tools

if BUILD_QT5
SUBDIRS += libProgressReporter_qt5
endif

pkginclude_HEADERS = config.hh
